@@ -2458,7 +2458,7 @@ command to generate the output files.
     </magic>
     <glob pattern="*.3gp"/>
     <glob pattern="*.3gpp"/>
-    <glob pattern="*.amr"/>
+    <glob pattern="*.3ga"/>
     <alias type="audio/3gpp"/>
     <alias type="video/3gpp-encrypted"/>
     <alias type="audio/3gpp-encrypted"/>
@@ -2489,6 +2489,7 @@ command to generate the output files.
   <mime-type type="audio/mpeg">
     <alias type="audio/x-mp3" />
     <alias type="audio/x-mpeg"/>
+    <alias type="audio/mp3"/>
     <_comment>MP3 audio</_comment>
     <magic priority="50">
       <match type="big32" value="0xfffb" offset="0"/>
@@ -2554,6 +2555,7 @@ command to generate the output files.
     <sub-class-of type="video/x-ms-asf"/>
     <_comment>Windows Media audio</_comment>
     <glob pattern="*.wma"/>
+    <alias type="audio/wma"/>
   </mime-type>
   <mime-type type="audio/x-musepack">
     <_comment>Musepack audio</_comment>
@@ -2569,6 +2571,7 @@ command to generate the output files.
     <glob pattern="*.ra"/>
     <glob pattern="*.rax"/>
     <alias type="audio/x-pn-realaudio"/>
+    <alias type="audio/vnd.m-realaudio"/>
   </mime-type>
   <mime-type type="application/ram">
     <_comment>RealMedia Metafile</_comment>
